--- a/language/move-vm/runtime/Cargo.toml
+++ b/language/move-vm/runtime/Cargo.toml
@@ -26,6 +26,11 @@ move-vm-natives = { path = "../natives" }
 move-vm-types = { path = "../types" }
 move-binary-format = { path = "../../move-binary-format" }
 
+#//////// 0L ////////
+diem-types = { path = "../../../types" }
+bcs = "0.1.2"
+
+
 [dev-dependencies]
 anyhow = "1.0.38"
 hex = "0.4.3"
