pick merkle library

--- a/language/move-vm/natives/Cargo.toml
+++ b/language/move-vm/natives/Cargo.toml
@@ -23,13 +23,13 @@ move-core-types = { path = "../../move-core/types" }
 move-vm-types = { path = "../types" }
 move-binary-format = { path = "../../move-binary-format" }
 
-######### 0L ########
+#//////// 0L ////////
 diem-global-constants = { path = "../../../config/global-constants"}
 hex = "0.4.2"
 diem-types = { path = "../../../types"}
 vdf = { path="../../../ol/verifiable_delay/vdf"}
 rust_decimal= { version = "1.14.2", default-features = true, features = ["maths"] }
-
+smtree = "0.1.2"
 
 [features]
 default = []
